--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -106,6 +106,7 @@
                                 android:text="Goals"
                                 android:textSize="12sp" />
                             <TextView
+                                android:id="@+id/tv_goals"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:fontFamily="@font/opensans_semibold"
