--- a/app/src/main/res/layout/item_gamifikasi.xml
+++ b/app/src/main/res/layout/item_gamifikasi.xml
@@ -33,7 +33,7 @@
                 android:layout_height="wrap_content">
 
                 <ImageView
-                    android:id="@+id/imageView26"
+                    android:id="@+id/imgGamifikasiThumbnail"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     app:layout_constraintBottom_toBottomOf="parent"
@@ -45,7 +45,7 @@
                     app:srcCompat="@drawable/gamificationcard" />
 
                 <TextView
-                    android:id="@+id/textView42"
+                    android:id="@+id/tv_GamifikasiPoint"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:background="@drawable/custom_blue_shape"
@@ -60,7 +60,7 @@
             </androidx.constraintlayout.widget.ConstraintLayout>
 
             <TextView
-                android:id="@+id/textView41"
+                android:id="@+id/tvGamificationTitle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10sp"
