--- a/app/src/main/res/layout/activity_add_food.xml
+++ b/app/src/main/res/layout/activity_add_food.xml
@@ -38,22 +38,22 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="64dp"
         android:fontFamily="@font/opensans_semibold"
-        android:text="Makanan"
+        android:text="Nama Makanan"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.09"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imgGoAllUpcomingSessions" />
 
-    <com.capstone_bangkit.fitnessist.customview.NormalEditText
-        android:id="@+id/edt_username"
+    <TextView
+        android:id="@+id/tv_food_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="32dp"
         android:layout_marginTop="8dp"
-        android:background="@drawable/edit_text"
-        android:maxLines="1"
-        android:padding="12dp"
+        android:text="Sate Padang"
+        android:textSize="16sp"
+
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
@@ -62,17 +62,17 @@
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="12dp"
         android:fontFamily="@font/opensans_semibold"
-        android:text="Jumlah"
+        android:text="Berat Makanan Dalam Gram"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.088"
+        app:layout_constraintHorizontal_bias="0.156"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edt_username" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_food_name" />
 
     <com.capstone_bangkit.fitnessist.customview.NormalEditText
-        android:id="@+id/jumlah"
+        android:id="@+id/edt_food_weight"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="32dp"
@@ -85,6 +85,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
     <Button
+        android:id="@+id/btn_tambahkan"
         android:layout_width="135dp"
         android:layout_height="55dp"
         android:layout_gravity="center"
@@ -94,6 +95,6 @@
         android:layout_marginTop="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/jumlah" />
+        app:layout_constraintTop_toBottomOf="@+id/edt_food_weight" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
