--- a/app/src/main/res/layout/item_food_horizontal.xml
+++ b/app/src/main/res/layout/item_food_horizontal.xml
@@ -5,6 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
+    android:layout_marginHorizontal="8dp"
     android:paddingHorizontal="16dp">
 
     <androidx.cardview.widget.CardView
