--- a/app/src/main/res/layout/fragment_user_calories.xml
+++ b/app/src/main/res/layout/fragment_user_calories.xml
@@ -163,9 +163,9 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_food_history"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:layout_marginStart="16dp" />
+        android:layout_marginHorizontal="16dp" />
 
 </LinearLayout>
