--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -70,7 +70,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/linear_header" />
 
             <androidx.cardview.widget.CardView
-                android:id="@+id/button2"
+                android:id="@+id/cv_change_data"
                 android:layout_width="0dp"
                 android:layout_height="100dp"
                 android:layout_gravity="center"
@@ -99,9 +99,9 @@
                         android:orientation="horizontal">
 
                         <LinearLayout
-                            android:layout_width="wrap_content"
+                            android:layout_width="300dp"
                             android:layout_height="wrap_content"
-                            android:layout_marginEnd="230dp"
+                            android:layout_marginEnd="24dp"
                             android:orientation="vertical">
 
                             <TextView
@@ -109,6 +109,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginTop="4dp"
+                                android:layout_marginStart="8dp"
                                 android:fontFamily="@font/montserrat_semibold"
                                 android:text="Goals"
                                 android:textSize="12sp" />
@@ -117,6 +118,8 @@
                                 android:id="@+id/my_program_id"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
+                                android:layout_marginStart="8dp"
+                                android:layout_marginTop="4dp"
                                 android:fontFamily="@font/opensans_semibold"
                                 android:text="Underweight"
                                 android:textColor="@color/gray"
@@ -126,7 +129,6 @@
                         <ImageView
                             android:layout_width="17dp"
                             android:layout_height="17dp"
-                            android:layout_marginStart="16dp"
                             android:layout_marginTop="10dp"
                             android:rotation="180"
                             android:src="@drawable/arrow_back" />
@@ -138,12 +140,14 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:progress="70"
-                        android:progressTint="@color/secondary_100" />
+                        android:progressTint="@color/secondary_100"
+                        android:layout_marginHorizontal="8dp"/>
 
                     <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:orientation="horizontal">
+                        android:orientation="horizontal"
+                        android:layout_marginStart="8dp">
 
                         <TextView
                             android:id="@+id/tv_my_program_percentage"
@@ -177,7 +181,7 @@
                 android:textSize="15sp"
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/button2" />
+                app:layout_constraintTop_toBottomOf="@+id/cv_change_data" />
 
             <TextView
                 android:layout_width="wrap_content"
