--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -64,7 +64,7 @@
                 app:layout_constraintTop_toTopOf="parent">
 
                 <TextView
-                    android:id="@+id/textView18"
+                    android:id="@+id/tv_weight_target"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
@@ -128,7 +128,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/like" />
+                app:srcCompat="@drawable/workoutnav" />
 
             <TextView
                 android:id="@+id/textView19"
@@ -159,7 +159,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/like" />
+                app:srcCompat="@drawable/baseline_gamepad_24" />
 
             <TextView
                 android:id="@+id/textView21"
@@ -190,7 +190,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/like" />
+                app:srcCompat="@drawable/baseline_settings_24" />
 
             <TextView
                 android:id="@+id/textView20"
@@ -208,7 +208,7 @@
             android:id="@+id/btn_logout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
+            android:layout_marginVertical="16dp"
             android:backgroundTint="@color/primary100"
             android:text="@string/log_out"
             android:layout_marginHorizontal="16dp"/>
