--- a/app/src/main/res/layout/fragment_user_calories.xml
+++ b/app/src/main/res/layout/fragment_user_calories.xml
@@ -51,72 +51,129 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_marginHorizontal="16dp"
-        android:layout_marginTop="8dp">
-        <TextView
-            android:id="@+id/kebutuhan_kalori"
+        android:layout_marginHorizontal="16dp">
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="2.200"
-            android:textSize="18dp"
-            android:layout_marginStart="13dp"
-            android:textStyle="bold"
-            android:layout_marginEnd="16dp"
-            android:textColor="@color/black" />
+            android:orientation="vertical"
+            android:layout_marginEnd="8dp"
+            android:layout_marginTop="8dp">
+            <TextView
+                android:id="@+id/tv_kebutuhan_kalori"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="2.200"
+                android:textSize="18dp"
+                android:layout_marginStart="13dp"
+                android:textStyle="bold"
+                android:layout_marginEnd="16dp"
+                android:textColor="@color/black" />
+            <TextView
+                android:id="@+id/title_firstCalories"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Kebutuhan"
+                android:textSize="16dp"
+                android:textColor="@color/black" />
+        </LinearLayout>
 
-        <TextView
-            android:id="@+id/kalori_makanan"
-            android:layout_width="220dp"
-            android:layout_height="wrap_content"
-            android:text="500"
-            android:textSize="18dp"
-            android:textStyle="bold"
-            android:textColor="@color/black"
-            android:textAlignment="center"/>
-
-        <TextView
-            android:id="@+id/kalori_akhir"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="1700"
-            android:textSize="18dp"
-            android:textStyle="bold"
-            android:textAlignment="textEnd"
-            android:textColor="@color/black" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginHorizontal="16dp"
-        android:layout_marginTop="8dp">
-        <TextView
-            android:id="@+id/title_firstCalories"
+        <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Kebutuhan"
-            android:textSize="16dp"
-            android:textColor="@color/black" />
+            android:src="@drawable/baseline_minimize_24"
+            android:layout_marginTop="10dp"/>
 
-        <TextView
-            android:id="@+id/title_LatihanCalories"
-            android:layout_width="220dp"
+        <LinearLayout
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Makanan"
-            android:textSize="16dp"
-            android:textColor="@color/black"
-            android:textAlignment="center"/>
+            android:orientation="vertical"
+            android:layout_marginHorizontal="8dp"
+            android:layout_marginTop="8dp">
+            <TextView
+                android:id="@+id/tv_kalori_makanan"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="500"
+                android:textSize="18dp"
+                android:textStyle="bold"
+                android:textColor="@color/black"
+                android:textAlignment="center"
+                android:layout_gravity="center"/>
+            <TextView
+                android:id="@+id/title_kalori_makanan"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Makanan"
+                android:textSize="16dp"
+                android:textColor="@color/black"
+                android:textAlignment="center"/>
+        </LinearLayout>
 
-        <TextView
-            android:id="@+id/total_firstCalories"
-            android:layout_width="match_parent"
+        <ImageView
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Sisa"
-            android:textSize="16dp"
-            android:textAlignment="textEnd"
-            android:layout_marginEnd="4dp"
-            android:textColor="@color/black" />
+            android:src="@drawable/baseline_add_24"
+            android:layout_marginTop="16dp"/>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_marginHorizontal="16dp"
+            android:layout_marginTop="8dp">
+            <TextView
+                android:id="@+id/tv_kalori_latihan"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="500"
+                android:textSize="18dp"
+                android:textStyle="bold"
+                android:textColor="@color/black"
+                android:textAlignment="center"
+                android:layout_gravity="center"/>
+            <TextView
+                android:id="@+id/title_kalori_latihan"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Latihan"
+                android:textSize="16dp"
+                android:textColor="@color/black"
+                android:textAlignment="center"/>
+        </LinearLayout>
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/baseline_pause_24"
+            android:layout_marginTop="16dp"
+            android:rotation="90"/>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_marginTop="8dp"
+            android:layout_marginStart="12dp">
+            <TextView
+                android:id="@+id/tv_kalori_sisa"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="1700"
+                android:textSize="18dp"
+                android:textStyle="bold"
+                android:textAlignment="textEnd"
+                android:textColor="@color/black" />
+            <TextView
+                android:id="@+id/total_firstCalories"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Sisa"
+                android:textSize="16dp"
+                android:textAlignment="textEnd"
+                android:layout_marginEnd="4dp"
+                android:textColor="@color/black" />
+        </LinearLayout>
+
     </LinearLayout>
 
     <LinearLayout
