--- a/app/src/main/res/layout/activity_add_food_manual.xml
+++ b/app/src/main/res/layout/activity_add_food_manual.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.AddFoodManualActivity">
+    tools:context=".ui.AddFoodActivity">
 
     <ImageView
         android:id="@+id/back"
@@ -37,6 +37,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="64dp"
+        android:layout_marginStart="8dp"
         android:fontFamily="@font/opensans_semibold"
         android:text="Nama Makanan"
         android:textSize="16sp"
@@ -45,15 +46,15 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imgGoAllUpcomingSessions" />
 
-    <TextView
-        android:id="@+id/tv_food_name"
+    <com.capstone_bangkit.fitnessist.customview.NormalEditText
+        android:id="@+id/edt_food_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="32dp"
         android:layout_marginTop="8dp"
-        android:text="Sate Padang"
-        android:textSize="16sp"
-
+        android:background="@drawable/edit_text"
+        android:maxLines="1"
+        android:padding="12dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
@@ -64,15 +65,16 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
         android:fontFamily="@font/opensans_semibold"
-        android:text="Berat Makanan Dalam Gram"
+        android:text="Total Kalori Makanan"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.156"
+        app:layout_constraintHorizontal_bias="0.13"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_food_name" />
+        app:layout_constraintTop_toBottomOf="@+id/edt_food_name" />
 
     <com.capstone_bangkit.fitnessist.customview.NormalEditText
         android:id="@+id/edt_food_weight"
+        android:text="0"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="32dp"
