feat: change color item recylerview workout list

--- a/app/src/main/res/layout/activity_workout_list.xml
+++ b/app/src/main/res/layout/activity_workout_list.xml
@@ -18,7 +18,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
-            android:id="@+id/imageView8"
+            android:id="@+id/tv_btn_back"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -34,7 +34,7 @@
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="@+id/imageView8"
+            app:layout_constraintStart_toStartOf="@+id/tv_btn_back"
             app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -113,7 +113,7 @@
                     android:text="|" />
 
                 <TextView
-                    android:id="@+id/textView25"
+                    android:id="@+id/tvTotalWorkout"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
