--- a/app/src/main/res/layout/activity_exercise_goals.xml
+++ b/app/src/main/res/layout/activity_exercise_goals.xml
@@ -7,7 +7,7 @@
     tools:context=".ui.ExerciseGoalsActivity">
 
     <ImageView
-        android:id="@+id/imageView4"
+        android:id="@+id/tv_btn_back_workout_fragment"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:scaleType="centerCrop"
