--- a/app/src/main/res/layout/item_workoutdetail.xml
+++ b/app/src/main/res/layout/item_workoutdetail.xml
@@ -8,6 +8,7 @@
     android:clipToPadding="false">
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/cv_item_exercise"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
