--- a/app/src/main/res/layout/activity_success_payment.xml
+++ b/app/src/main/res/layout/activity_success_payment.xml
@@ -104,7 +104,7 @@
     </androidx.cardview.widget.CardView>
 
     <Button
-        android:id="@+id/tv_back"
+        android:id="@+id/btn_back_home"
         android:layout_width="130dp"
         android:height="55dp"
         android:layout_gravity="center"
